hphp/test/slow/finally/try_finally_001.php.expectf
string(7) "finally"

Fatal error: Uncaught exception 'Exception' with message 'ex' in %s/test/slow/finally/try_finally_001.php:4
Stack trace:
#0 %s/test/slow/finally/try_finally_001.php(10): foo('finally')
#1 {main}